--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "childprocesstest",
+  "name": "kigaruwebmanager",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Kigaru Web Manager\"" 
   },
   "author": "Mark Huynh",
   "license": "MIT",
   "dependencies": {
     "electron": "^6.0.1"
+  },
+  "devDependencies": {
+    "electron-packager": "^14.0.4"
   }
 }
