--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "kigaruwebmanager",
+  "productName": "Kigaru Web Manager",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package-win": "electron-packager . Kigaru Web Manager --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Kigaru Web Manager\"" 
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Kigaru Web Manager\"" 
   },
   "author": "Mark Huynh",
   "license": "MIT",
